--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "@dnd-kit/utilities": "^3.2.0",
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.8.1",
+    "@headlessui/react": "^1.7.14",
     "@mui/icons-material": "^5.8.3",
     "@mui/material": "^5.8.1",
     "@mui/x-data-grid": "^5.11.1",
@@ -34,7 +35,7 @@
     "react-scripts": "5.0.1",
     "react-table": "^7.8.0",
     "sass": "^1.54.0",
-    "styled-components": "^5.3.5",
+    "styled-components": "^5.3.10",
     "typescript": "^4.7.4",
     "web-vitals": "^2.1.4",
     "webpack": "^5.74.0",
