--- a/client/package.json
+++ b/client/package.json
@@ -11,9 +11,10 @@
     "@emotion/styled": "^11.8.1",
     "@faker-js/faker": "^8.0.2",
     "@headlessui/react": "^1.7.14",
+    "@hookform/resolvers": "^3.1.1",
     "@mui/icons-material": "^5.8.3",
     "@mui/material": "^5.8.1",
-    "@mui/x-data-grid": "^5.11.1",
+    "@mui/x-data-grid": "^6.9.1",
     "@mui/x-date-pickers": "^5.0.0-beta.1",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
@@ -33,6 +34,7 @@
     "react-chartjs-2": "^5.2.0",
     "react-datepicker": "^4.8.0",
     "react-dom": "^18.1.0",
+    "react-hook-form": "^7.45.2",
     "react-icons": "^4.10.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
@@ -43,7 +45,8 @@
     "typescript": "^4.7.4",
     "web-vitals": "^2.1.4",
     "webpack": "^5.74.0",
-    "yup": "^0.32.11"
+    "yup": "^0.32.11",
+    "zod": "^3.21.4"
   },
   "scripts": {
     "start": "react-scripts start",
