--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
     "nodemon": "^2.0.16",
     "passport": "^0.6.0",
     "passport-google-oauth20": "^2.0.0",
+    "passport-local": "^1.0.0",
     "validator": "^13.11.0"
   }
 }
