--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "axios": "^0.27.2",
+    "chart.js": "^4.4.0",
     "classnames": "^2.3.1",
     "css-loader": "^6.7.1",
     "date-fns": "^2.28.0",
