--- a/client/package.json
+++ b/client/package.json
@@ -78,5 +78,6 @@
     "postcss": "^8.4.14",
     "postcss-nesting": "^10.1.10",
     "tailwindcss": "^3.0.24"
-  }
+  },
+  "homepage": "https://flow-tw7j.onrender.com/"
 }
