--- a/client/package.json
+++ b/client/package.json
@@ -79,5 +79,5 @@
     "postcss-nesting": "^10.1.10",
     "tailwindcss": "^3.0.24"
   },
-  "homepage": "https://flow-tw7j.onrender.com/"
+  "homepage": "https://flow-tw7j.onrender.com/home"
 }
