--- a/server/package.json
+++ b/server/package.json
@@ -11,7 +11,9 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "compression": "^1.7.4",
     "connect-mongodb-session": "^3.1.1",
+    "connect-redis": "^7.1.0",
     "cors": "^2.8.5",
     "date-fns": "^2.28.0",
     "dotenv": "^16.0.1",
@@ -23,6 +25,8 @@
     "passport": "^0.6.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
+    "pm2": "^5.3.0",
+    "redis": "^4.6.8",
     "validator": "^13.11.0"
   }
 }
