--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "date-fns": "^2.28.0",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "express-rate-limit": "^6.11.0",
     "express-session": "^1.17.3",
     "mongoose": "^6.3.4",
     "morgan": "^1.10.0",
@@ -26,6 +27,7 @@
     "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
     "pm2": "^5.3.0",
+    "rate-limit-redis": "^3.1.0",
     "redis": "^4.6.8",
     "validator": "^13.11.0"
   }
