--- a/client/package.json
+++ b/client/package.json
@@ -42,6 +42,7 @@
     "react-table": "^7.8.0",
     "recharts": "^2.7.2",
     "sass": "^1.54.0",
+    "serve": "^14.2.1",
     "styled-components": "^5.3.10",
     "typescript": "^4.7.4",
     "web-vitals": "^2.1.4",
@@ -50,7 +51,7 @@
     "zod": "^3.21.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "dev",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -79,5 +80,5 @@
     "postcss-nesting": "^10.1.10",
     "tailwindcss": "^3.0.24"
   },
-  "homepage": "https://flow-tw7j.onrender.com"
+  "homepage": "flow-issue-tracker-production.up.railway.app"
 }
