--- a/client/package.json
+++ b/client/package.json
@@ -51,7 +51,8 @@
     "zod": "^3.21.4"
   },
   "scripts": {
-    "start": "dev",
+    "start:dev": "dev",
+    "start:prod": "serve build -s -n -L -p 3000",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
