--- a/client/package.json
+++ b/client/package.json
@@ -52,7 +52,7 @@
   },
   "scripts": {
     "start:dev": "dev",
-    "start:prod": "serve build -s -n -L -p 3000",
+    "start:prod": "serve build -s -n -L -p $PORT",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
