--- a/client/package.json
+++ b/client/package.json
@@ -81,5 +81,5 @@
     "postcss-nesting": "^10.1.10",
     "tailwindcss": "^3.0.24"
   },
-  "homepage": "./"
+  "homepage": "https://flow-issue-tracker-production.up.railway.app/"
 }
