--- a/client/package.json
+++ b/client/package.json
@@ -51,7 +51,7 @@
     "zod": "^3.21.4"
   },
   "scripts": {
-    "start:dev": "dev",
+    "dev": "react-scripts start",
     "start:prod": "serve build -s -n -L -p $PORT",
     "build": "react-scripts build",
     "test": "react-scripts test",
