--- a/client/package.json
+++ b/client/package.json
@@ -39,6 +39,7 @@
     "react-icons": "^4.10.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.13.8",
     "react-table": "^7.8.0",
     "recharts": "^2.7.2",
     "sass": "^1.54.0",
