--- a/client/package.json
+++ b/client/package.json
@@ -52,7 +52,7 @@
     "zod": "^3.21.4"
   },
   "scripts": {
-    "dev": "react-scripts start",
+    "start": "react-scripts start",
     "start:prod": "serve build -s -n -L -p $PORT",
     "build": "react-scripts build",
     "test": "react-scripts test",
