--- a/client/package.json
+++ b/client/package.json
@@ -35,6 +35,7 @@
     "react-chartjs-2": "^5.2.0",
     "react-datepicker": "^4.8.0",
     "react-dom": "^18.1.0",
+    "react-error-boundary": "^4.0.11",
     "react-hook-form": "^7.45.2",
     "react-icons": "^4.10.1",
     "react-router-dom": "^6.3.0",
