--- a/client/package.json
+++ b/client/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "dependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-    "@dnd-kit/core": "^6.0.5",
+    "@dnd-kit/core": "^6.0.7",
     "@dnd-kit/sortable": "^7.0.1",
     "@dnd-kit/utilities": "^3.2.0",
     "@emotion/react": "^11.9.3",
@@ -83,5 +83,5 @@
     "postcss-nesting": "^10.1.10",
     "tailwindcss": "^3.0.24"
   },
-  "homepage": "https://flow-issue-tracker-production.up.railway.app/"
+  "homepage": "https://flow-issue-tracker.com/"
 }
