--- a/.github/workflows/ci-server.yml
+++ b/.github/workflows/ci-server.yml
@@ -34,5 +34,5 @@ jobs:
     - name: Push to Dockerhub
       env: 
         DOCKER_USERNAME: ${{secrets.DOCKER_USERNAME}}
-      run: docker push $DOCKER_USERNAME/flow-issue-tracker:latest
+      run: docker push $DOCKER_USERNAME/flow-issue-tracker:server
     
