--- a/.github/workflows/ci-server.yml
+++ b/.github/workflows/ci-server.yml
@@ -23,16 +23,18 @@ jobs:
       
     - name: Build the Docker image
       working-directory: ./server
-      run: docker build -t flow-issue-tracker .
-      
-    - name: Tag image
-      working-directory: ./server
       env: 
         DOCKER_USERNAME: ${{secrets.DOCKER_USERNAME}}
-      run: docker tag flow-issue-tracker $DOCKER_USERNAME/flow-issue-tracker
+      run: docker build -t $DOCKER_USERNAME/flow-issue-tracker:server .
+      
+    # - name: Tag image
+    #   working-directory: ./server
+    #   env: 
+    #     DOCKER_USERNAME: ${{secrets.DOCKER_USERNAME}}
+    #   run: docker tag flow-issue-tracker $DOCKER_USERNAME/flow-issue-tracker
 
     - name: Push to Dockerhub
       env: 
         DOCKER_USERNAME: ${{secrets.DOCKER_USERNAME}}
-      run: docker push $DOCKER_USERNAME/flow-issue-tracker:latest
+      run: docker push $DOCKER_USERNAME/flow-issue-tracker:server
     
