--- a/.github/workflows/ci-server.yml
+++ b/.github/workflows/ci-server.yml
@@ -27,8 +27,14 @@ jobs:
         DOCKER_USERNAME: ${{secrets.DOCKER_USERNAME}}
       run: docker build -t $DOCKER_USERNAME/flow-issue-tracker:server .
       
+    # - name: Tag image
+    #   working-directory: ./server
+    #   env: 
+    #     DOCKER_USERNAME: ${{secrets.DOCKER_USERNAME}}
+    #   run: docker tag flow-issue-tracker $DOCKER_USERNAME/flow-issue-tracker
 
     - name: Push to Dockerhub
       env: 
         DOCKER_USERNAME: ${{secrets.DOCKER_USERNAME}}
-      run: docker push $DOCKER_USERNAME/issue-tracker:server
+      run: docker push $DOCKER_USERNAME/flow-issue-tracker:server
+    
