--- a/.github/workflows/cd-server.yml
+++ b/.github/workflows/cd-server.yml
@@ -21,13 +21,14 @@ jobs:
       
     - name: Delete Old Container
       run: sudo docker rm -f server-container || true
+    
+    - name: Create .env file
+      run: sudo touch .env && sudoecho ${{secrets.DOTENV_KEY_SERVER}} < .env
+
     - name: Run Container w/ Latest Image
-      env:
-        DOCKER_USERNAME: ${{secrets.DOCKER_USERNAME}}
-        ENV: ${{secrets.SERVER_ENV}}
       run: >
         sudo docker run -d -p 8080:8080 
         --name server-container 
-        -- env-file $ENV
-        $DOCKER_USERNAME/flow-issue-tracker:server
+        -- env-file ./env.list
+        ${{secrets.DOCKER_USERNAME}}/flow-issue-tracker:server
         
