--- a/.github/workflows/cd-server.yml
+++ b/.github/workflows/cd-server.yml
@@ -23,7 +23,9 @@ jobs:
       run: sudo docker rm -f server-container || true
     
     - name: Create .env file
-      run: sudo touch .env && sudo echo ${{secrets.DOTENV_KEY_SERVER}} < .env 
+      run: |
+        sudo touch .env 
+        sudo echo ${{secrets.DOTENV_KEY_SERVER}} > .env 
     
     - name: Verify
       run: sudo cat .env
