--- a/.github/workflows/cd-server.yml
+++ b/.github/workflows/cd-server.yml
@@ -31,7 +31,7 @@ jobs:
       run: sudo cat .env
 
     - name: Run Container w/ Latest Image
-      run: >
+      run: |
         sudo docker run 
         --env-file ./.env
         -d -p 8080:8080 
