--- a/.github/workflows/cd-server.yml
+++ b/.github/workflows/cd-server.yml
@@ -28,6 +28,7 @@ jobs:
     - name: Create .env file
       run: |
         sudo touch .env 
+        sudo chmod u+w .env
         sudo echo ${{secrets.DOTENV_KEY_SERVER}} > .env 
     
     - name: Verify
