--- a/.github/workflows/cd-server.yml
+++ b/.github/workflows/cd-server.yml
@@ -28,7 +28,7 @@ jobs:
     - name: Create .env file
       run: |
         sudo touch .env 
-        sudo sh -c "${{secrets.SERVER_ENV}}" > .env 
+        sudo bash -c "${{secrets.SERVER_ENV}}" > .env 
     
     - name: Verify
       run: sudo cat .env
