--- a/.github/workflows/cd-server.yml
+++ b/.github/workflows/cd-server.yml
@@ -6,6 +6,7 @@ on:
     types:
       - completed
 
+
 jobs:
 
   build:
@@ -13,7 +14,7 @@ jobs:
     runs-on: self-hosted
 
     steps:
-    - uses: actions/checkout@v4
+    - uses: actions/checkout@aws
     
     - name: Pull Docker Image
       env:
