--- a/.github/workflows/cd-server.yml
+++ b/.github/workflows/cd-server.yml
@@ -14,7 +14,7 @@ jobs:
     runs-on: self-hosted
 
     steps:
-    - uses: actions/checkout@aws
+    - uses: actions/checkout@v4
     
     - name: Pull Docker Image
       env:
