--- a/docker-compose-server.yml
+++ b/docker-compose-server.yml
@@ -16,10 +16,11 @@ services:
       - "80:80"
       - "443:443"
     volumes:
-      - web-root:/var/www/html
       - ./server-configs/nginx:/etc/nginx/conf.d
       - ./server-configs/certbot/conf:/etc/letsencrypt
       - ./server-configs/certbot/www:/var/www/certbot
+    depends_on:
+      - certbot
 
 
   certbot:
