--- a/.github/workflows/cd-server.yml
+++ b/.github/workflows/cd-server.yml
@@ -47,8 +47,8 @@ jobs:
         
 
     - name: Run Containers
-      run: docker-compose -f docker-compose-server.yml up -d
-      
+      run: docker compose -f docker-compose-server.yml up -d
+
 
     - name: 'Cleanup Build Folder'
       run: |
