--- a/.github/workflows/cd-server.yml
+++ b/.github/workflows/cd-server.yml
@@ -10,7 +10,7 @@ env:
   COMPOSE_FNAME: docker-compose-server.yml
   API_DOMAIN: ${{vars.API_DOMAIN}}
   EMAIL: ${{secrets.EMAIL}}
-  
+
 jobs:
 
   build:
@@ -40,9 +40,11 @@ jobs:
 
     
     - name: Load Server Environment Variables
+      shell: bash
       run: |
         sudo touch .env.server
         sudo bash -c 'echo "${{secrets.SERVER_ENV}}" > .env.server'
+
         
 
     - name: Run Containers
