--- a/.github/workflows/cd-server.yml
+++ b/.github/workflows/cd-server.yml
@@ -40,8 +40,8 @@ jobs:
         API_DOMAIN: ${{vars.API_DOMAIN}}
         EMAIL: ${{secrets.EMAIL}}
       run: |
-        sudo echo $COMPOSE_FNAME
-        sudo echo $API_DOMAIN
+        sudo echo "$COMPOSE_FNAME"
+        sudo echo "$API_DOMAIN"
         sudo touch .env.server
         sudo bash -c 'echo "${{secrets.SERVER_ENV}}" > .env.server'
       shell: bash
