--- a/.github/workflows/cd-server.yml
+++ b/.github/workflows/cd-server.yml
@@ -6,10 +6,7 @@ on:
     types:
       - completed
 
-env:
-  COMPOSE_FNAME: docker-compose-server.yml
-  API_DOMAIN: ${{vars.API_DOMAIN}}
-  EMAIL: ${{secrets.EMAIL}}
+
 
 jobs:
 
@@ -34,7 +31,15 @@ jobs:
 
 
     - name: Fetch Dummy SSL Cert
+      env:
+        COMPOSE_FNAME: docker-compose-server.yml
+        API_DOMAIN: ${{vars.API_DOMAIN}}
+        EMAIL: ${{secrets.EMAIL}}
       run: |
+        COMPOSE_FNAME="docker-compose-server.yml"
+        API_DOMAIN="${{vars.API_DOMAIN}}"
+        EMAIL="${{secrets.EMAIL}}"
+
         chmod +x init-encrypt-server.sh
         sudo ./init-encrypt-server.sh
       shell: bash
