--- a/.github/workflows/cd-server.yml
+++ b/.github/workflows/cd-server.yml
@@ -32,14 +32,10 @@ jobs:
 
     - name: Fetch Dummy SSL Cert
       env:
-        COMPOSE_FNAME: docker-compose-server.yml
-        API_DOMAIN: ${{vars.API_DOMAIN}}
-        EMAIL: ${{secrets.EMAIL}}
+        compose_fname: docker-compose-server.yml
+        api_domain: ${{vars.API_DOMAIN}}
+        email: ${{secrets.EMAIL}}
       run: |
-        COMPOSE_FNAME="docker-compose-server.yml"
-        API_DOMAIN="${{vars.API_DOMAIN}}"
-        EMAIL="${{secrets.EMAIL}}"
-
         chmod +x init-encrypt-server.sh
         sudo sh ./init-encrypt-server.sh
       shell: bash
