--- a/.github/workflows/cd-server.yml
+++ b/.github/workflows/cd-server.yml
@@ -36,9 +36,9 @@ jobs:
       #   API_DOMAIN: ${{vars.API_DOMAIN}}
       #   EMAIL: ${{secrets.EMAIL}}
       run: |
-        sudo bash -c 'echo "COMPOSE_FNAME=docker-compose-server.yml" >> "$GITHUB_ENV"'
-        sudo bash -c 'echo "API_DOMAIN=${{vars.API_DOMAIN}}" >> "$GITHUB_ENV"'
-        sudo bash -c 'echo "EMAIL=docker-${{secrets.EMAIL}}" >> "$GITHUB_ENV"'
+        echo "COMPOSE_FNAME=docker-compose-server.yml" >> $GITHUB_ENV
+        echo "API_DOMAIN=${{vars.API_DOMAIN}}" >> $GITHUB_ENV
+        echo "EMAIL=docker-${{secrets.EMAIL}}" >> $GITHUB_ENV
         chmod +x init-encrypt-server.sh
         sudo sh./init-encrypt-server.sh
       shell: bash
