--- a/.github/workflows/cd-server.yml
+++ b/.github/workflows/cd-server.yml
@@ -38,7 +38,7 @@ jobs:
       run: |
         touch .env.server 
         chmod +x init-encrypt-server.sh
-        sudo init-encrypt-server.sh
+        sudo ./init-encrypt-server.sh
       
 
     
