--- a/docker-compose-server.yml
+++ b/docker-compose-server.yml
@@ -19,6 +19,7 @@ services:
       - ./server-configs/nginx:/etc/nginx/conf.d
       - ./server-configs/certbot/conf:/etc/letsencrypt
       - ./server-configs/certbot/www:/var/www/certbot
+    command: "/bin/sh -c 'while :; do sleep 6h & wait $${!}; nginx -s reload; done & nginx -g \"daemon off;\"'"
     depends_on:
       - certbot
 
