--- a/server-configs/pre-cert/config.conf
+++ b/server-configs/pre-cert/config.conf
@@ -1,18 +1,17 @@
 server {	
 	
-	listen 80 default_server;
-	listen [::]:80 default_server;
+	listen 80;
+	listen [::]:80;
 
-    if ($host = ec2api.flow-issue-tracker.com) {
+    location / {
         return 301 https://$host$request_uri;
-    } # managed by Certbot
+    }
 
 	location /.well-known/acme-challenge/ {
 		root /var/www/certbot;
 	}
 
 	server_name ec2api.flow-issue-tracker.com;
-    return 404; # managed by Certbot
 
 }
 
