--- a/server-configs/post-cert/config.conf
+++ b/server-configs/post-cert/config.conf
@@ -36,3 +36,20 @@ server {
 
 
 }
+
+server {	
+	
+	listen 80;
+	listen [::]:80;
+
+    location / {
+        return 301 https://$host$request_uri;
+    }
+
+	location /.well-known/acme-challenge/ {
+		root /var/www/certbot;
+	}
+
+	server_name ec2api.flow-issue-tracker.com;
+
+}
