--- a/server-configs/post-cert/config.conf
+++ b/server-configs/post-cert/config.conf
@@ -16,7 +16,7 @@ server {
 	server_name ec2api.flow-issue-tracker.com;
 
 	location / {
-		proxy_pass https://api;
+		proxy_pass http://api;
 		proxy_http_version 1.1;
 		proxy_set_header Upgrade $http_upgrade;
 		proxy_set_header Connection 'upgrade';
