--- a/.github/workflows/cd-server.yml
+++ b/.github/workflows/cd-server.yml
@@ -23,7 +23,7 @@ jobs:
         sudo bash -c 'echo y | docker system prune'
 
 
-    - name: Fetch Dummy SSL Cert
+    - name: Obtain SSL Cert
       env:
         
         COMPOSE_FNAME: docker-compose-server.yml
@@ -34,8 +34,8 @@ jobs:
       run: |
         touch .env.server 
         sudo bash -c 'echo "${{secrets.SERVER_ENV}}" > .env.server'
-        chmod +x ./scripts/init-encrypt-server.sh
-        ./scripts/init-encrypt-server.sh
+        chmod +x ./scripts/server/ssl-cert.sh
+        ./scripts/server/ssl-cert.sh
       
 
     
