--- a/.github/workflows/cd-server.yml
+++ b/.github/workflows/cd-server.yml
@@ -12,6 +12,11 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
+      with:
+        sparse-checkout: |
+          ./scripts
+          ./server-configs
+
     
 
       
