--- a/.github/workflows/cd-server.yml
+++ b/.github/workflows/cd-server.yml
@@ -20,9 +20,9 @@ jobs:
     - name: SSL Check
       run: |
         if [ -d ./server-configs/certbot ]; then
-            sudo bash -c 'echo "need_ssl=false" >> "${GITHUB_ENV}"'
+            sudo bash -c 'echo "need_ssl=false" >> "$GITHUB_ENV"'
         else
-            sudo bash -c 'echo "need_ssl=true" >> "${GITHUB_ENV}"'
+            sudo bash -c 'echo "need_ssl=true" >> "$GITHUB_ENV"'
         fi
 
 
