--- a/.github/workflows/cd-server.yml
+++ b/.github/workflows/cd-server.yml
@@ -19,10 +19,11 @@ jobs:
 
     - name: SSL Check
       run: |
+        echo $GITHUB_ENV
         if [ -d ./server-configs/certbot ]; then
-            sudo bash -c 'echo "need_ssl=false" >> "$GITHUB_ENV"'
+            sudo bash -c 'echo "need_ssl=false" >> $GITHUB_ENV'
         else
-            sudo bash -c 'echo "need_ssl=true" >> "$GITHUB_ENV"'
+            sudo bash -c 'echo "need_ssl=true" >> $GITHUB_ENV'
         fi
 
 
