--- a/.github/workflows/cd-server.yml
+++ b/.github/workflows/cd-server.yml
@@ -19,43 +19,43 @@ jobs:
 
     - name: SSL Check
       run: |
-        echo $GITHUB_ENV
-        if [ -d ./server-configs/certbot ]; then
-            sudo bash -c 'echo "need_ssl=false" >> $GITHUB_ENV'
-        else
-            sudo bash -c 'echo "need_ssl=true" >> $GITHUB_ENV'
-        fi
+        echo "$GITHUB_ENV"
+        # if [ -d ./server-configs/certbot ]; then
+        #     sudo bash -c 'echo "need_ssl=false" >> $GITHUB_ENV'
+        # else
+        #     sudo bash -c 'echo "need_ssl=true" >> $GITHUB_ENV'
+        # fi
 
 
       
-    - name: Get Configs for SSL Setup
-      if: ${{ env.need_ssl }} == 'true'
-      uses: actions/checkout@v4
-      with:
-        sparse-checkout: ./server-configs
+    # - name: Get Configs for SSL Setup
+    #   if: ${{ env.need_ssl }} == 'true'
+    #   uses: actions/checkout@v4
+    #   with:
+    #     sparse-checkout: ./server-configs
 
 
       
-    - name: Delete Old Containers
-      run: |
-        sudo docker rm -f api-server || true
-        sudo docker rm -f reverse-proxy || true 
-        sudo docker rm -f certbot || true
-        sudo bash -c 'echo y | docker system prune'
+    # - name: Delete Old Containers
+    #   run: |
+    #     sudo docker rm -f api-server || true
+    #     sudo docker rm -f reverse-proxy || true 
+    #     sudo docker rm -f certbot || true
+    #     sudo bash -c 'echo y | docker system prune'
 
 
-    - name: Compose Services (Obtain SSL Cert if Necessary)
-      env:
+    # - name: Compose Services (Obtain SSL Cert if Necessary)
+    #   env:
         
-        COMPOSE_FNAME: docker-compose-server.yml
-        API_DOMAIN: ${{vars.API_DOMAIN}}
-        EMAIL: ${{secrets.EMAIL}}
+    #     COMPOSE_FNAME: docker-compose-server.yml
+    #     API_DOMAIN: ${{vars.API_DOMAIN}}
+    #     EMAIL: ${{secrets.EMAIL}}
         
         
-      run: |
-        touch .env.server 
-        sudo bash -c 'echo "${{secrets.SERVER_ENV}}" > .env.server'
-        chmod +x ./scripts/server/ssl-cert.sh
-        ./scripts/server/ssl-cert.sh
+    #   run: |
+    #     touch .env.server 
+    #     sudo bash -c 'echo "${{secrets.SERVER_ENV}}" > .env.server'
+    #     chmod +x ./scripts/server/ssl-cert.sh
+    #     ./scripts/server/ssl-cert.sh
   
         
