--- a/.github/workflows/cd-server.yml
+++ b/.github/workflows/cd-server.yml
@@ -29,11 +29,13 @@ jobs:
 
 
       
-    # - name: Get Configs for SSL Setup
-    #   if: ${{ env.need_ssl }} == 'true'
-    #   uses: actions/checkout@v4
-    #   with:
-    #     sparse-checkout: ./server-configs
+    - name: Get Configs for SSL Setup
+      if: ${{ env.need_ssl }} == 'true'
+      run: echo foo
+      # uses: actions/checkout@v4
+      # with:
+      #   sparse-checkout: ./server-configs
+     
 
 
       
