--- a/.github/workflows/cd-server.yml
+++ b/.github/workflows/cd-server.yml
@@ -27,7 +27,7 @@ jobs:
         sudo docker rm -f certbot || true
         sudo bash -c 'echo y | docker system prune'
 
-    - name: Obtain SSL Cert
+    - name: Compose Up Services
       env:
         COMPOSE_FNAME: docker-compose-server.yml
         API_DOMAIN: ${{vars.API_DOMAIN}}
@@ -35,5 +35,5 @@ jobs:
       run: |
         touch .env.server 
         sudo bash -c 'echo "${{secrets.SERVER_ENV}}" > .env.server'
-        chmod +x ./scripts/server/ssl-cert.sh
-        ./scripts/server/ssl-cert.sh
+        chmod +x ./scripts/server/compose.sh
+        ./scripts/server/compose.sh
