--- a/docker-compose-server.yml
+++ b/docker-compose-server.yml
@@ -6,6 +6,10 @@ services:
     ports: 
       - "8080:8080"
     env_file: .env.server
+    deploy:
+      mode: replicated
+      replicas: 4
+
     
 
   reverse-proxy:
