--- a/docker-compose-server.yml
+++ b/docker-compose-server.yml
@@ -1,7 +1,7 @@
 services:
   api-server:
     image: hzadocker/flow-issue-tracker:server
-    container_name: api-server
+    # container_name: api-server
     restart: unless-stopped
     ports: 
       - "8080:8080"
