--- a/server-configs/proxy/post-cert.conf
+++ b/server-configs/proxy/post-cert.conf
@@ -1,6 +1,6 @@
-upstream api {
-	server api-server:8080;
-}
+# upstream api {
+# 	server api-server:8080;
+# }
 
 server {    
 	
@@ -15,8 +15,11 @@ server {
 
 	server_name ec2api.flow-issue-tracker.com;
 
+	resolver 127.0.0.11 valid=5s;
+    set $upstream api-server;
+
 	location / {
-		proxy_pass http://api;
+		proxy_pass http://api:8080;
 		proxy_http_version 1.1;
 		proxy_set_header Upgrade $http_upgrade;
 		proxy_set_header Connection 'upgrade';
