--- a/.github/workflows/cd-server.yml
+++ b/.github/workflows/cd-server.yml
@@ -22,7 +22,7 @@ jobs:
       
     - name: Delete Old Containers 
       run: |
-        sudo docker rm -f $(sudo docker ps -qa)
+        sudo docker rm -f $(sudo docker ps -qa) || true
         sudo bash -c 'echo y | docker system prune'
 
     - name: Compose Up Services
