--- a/server-configs/proxy/post-cert.conf
+++ b/server-configs/proxy/post-cert.conf
@@ -1,6 +1,8 @@
-# upstream api {
-# 	server api-server:8080;
-# }
+worker_processes 1;
+
+events {
+  worker_connections 1024;
+}
 
 server {    
 	
