--- a/server-configs/proxy/post-cert.conf
+++ b/server-configs/proxy/post-cert.conf
@@ -21,7 +21,7 @@ server {
     set $upstream api-server;
 
 	location / {
-		proxy_pass http://api:8080;
+		proxy_pass http://$upstream:8080;
 		proxy_http_version 1.1;
 		proxy_set_header Upgrade $http_upgrade;
 		proxy_set_header Connection 'upgrade';
