--- a/.github/workflows/cd-server.yml
+++ b/.github/workflows/cd-server.yml
@@ -34,7 +34,7 @@ jobs:
         echo foo
         echo foo
         echo foo
-        ls docker-compose-files
+        ls docker-compose-files/server
 
         sudo docker rm -f api-server || true
         sudo docker rm -f reverse-proxy || true  
