--- a/docker-compose-files/server/docker-compose-server.yml
+++ b/docker-compose-files/server/docker-compose-server.yml
@@ -5,7 +5,7 @@ services:
     restart: unless-stopped
     ports: 
       - "8080:8080"
-    env_file: ../.env.server
+    env_file: .env.server
     
 
   reverse-proxy:
