--- a/.github/workflows/cd-server.yml
+++ b/.github/workflows/cd-server.yml
@@ -16,7 +16,6 @@ jobs:
         sparse-checkout: |
           ./scripts
           ./server-configs
-          ./docker-compose-files
         clean: false
 
 
@@ -43,12 +42,12 @@ jobs:
 
     - name: Compose Up Services
       env:
-        COMPOSE_FNAME: ./docker-compose-files/server/docker-compose-server.yml
+        COMPOSE_FNAME: docker-compose-server.yml
         API_DOMAIN: ${{vars.API_DOMAIN}}
         EMAIL: ${{secrets.EMAIL}} 
         CONFIG_TYPE: root-server
       run: |
         touch .env.server 
-        sudo bash -c 'echo "${{secrets.SERVER_ENV}}" > ./docker-compose-files/server/.env.server'
+        sudo bash -c 'echo "${{secrets.SERVER_ENV}}" > .env.server'
         chmod +x ./scripts/server/compose.sh
         ./scripts/server/compose.sh
