--- a/docker-compose-server.yml
+++ b/docker-compose-server.yml
@@ -16,9 +16,9 @@ services:
       - "80:80"
       - "443:443"
     volumes:
-      - ../server-configs/proxied/pre-cert.conf:/etc/nginx/conf.d/config.conf
-      - ../server-configs/certbot/conf:/etc/letsencrypt
-      - ../server-configs/certbot/www:/var/www/certbot
+      - ./server-configs/proxied/pre-cert.conf:/etc/nginx/conf.d/config.conf
+      - ./server-configs/certbot/conf:/etc/letsencrypt
+      - ./server-configs/certbot/www:/var/www/certbot
     command: "/bin/sh -c 'while :; do sleep 6h & wait $${!}; nginx -s reload; done & nginx -g \"daemon off;\"'"
 
 
@@ -27,6 +27,6 @@ services:
     container_name: certbot
     restart: unless-stopped
     volumes:
-      - ../server-configs/certbot/conf:/etc/letsencrypt
-      - ../server-configs/certbot/www:/var/www/certbot
+      - ./server-configs/certbot/conf:/etc/letsencrypt
+      - ./server-configs/certbot/www:/var/www/certbot
     entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 12h & wait $${!}; done;'"
