--- a/.github/workflows/cd-server.yml
+++ b/.github/workflows/cd-server.yml
@@ -29,7 +29,7 @@ jobs:
 
     - name: Compose Up Services
       env:
-        COMPOSE_FNAME: docker-compose-server.yml
+        COMPOSE_FNAME: compose-proxied-server.yml
         API_DOMAIN: ${{vars.API_DOMAIN}}
         EMAIL: ${{secrets.EMAIL}} 
         CONFIG_TYPE: root-server
