--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,5 +1,5 @@
 # FROM node:18.20.3
-FROM --platform=linux/arm64 arm64v8/node:18.20.4-alpine3.20
+FROM arm64v8/node:18.20.4-alpine3.20
 
 
 WORKDIR /server
