--- a/.github/workflows/cd-server.yml
+++ b/.github/workflows/cd-server.yml
@@ -29,10 +29,10 @@ jobs:
 
     - name: Compose Up Services
       env:
-        COMPOSE_FNAME: compose-server-proxied.yml
+        COMPOSE_FNAME: compose-server-root.yml
         API_DOMAIN: ${{vars.API_DOMAIN}}
         EMAIL: ${{secrets.EMAIL}} 
-        CONFIG_TYPE: proxied
+        CONFIG_TYPE: root-server
       run: |
         touch .env.server 
         sudo bash -c 'echo "${{secrets.SERVER_ENV}}" > .env.server'
