--- a/.github/workflows/cd-server.yml
+++ b/.github/workflows/cd-server.yml
@@ -1,8 +1,10 @@
 name: API CD Pipeline
 
 on:
-  push:
-    branches: [ "aws" ]
+  workflow_run:
+    workflows: ["API CI Pipeline"]
+    types:
+      - completed
 
 jobs: 
 
@@ -26,6 +28,7 @@ jobs:
         sudo docker rm -f reverse-proxy || true  
         sudo docker rm -f certbot || true
         sudo bash -c 'echo y | docker system prune' 
+        
 
     - name: Compose Up Services 
       env:
