--- a/.github/workflows/ci-server.yml
+++ b/.github/workflows/ci-server.yml
@@ -2,24 +2,45 @@ name: API CI Pipeline
 
 on:
   push:
-    branches: [ "server" ]
+    branches: [ "aws" ]
     
 jobs:
 
-  build:
+  check-changes:
 
     runs-on: [self-hosted, Reverse-Proxy]
 
+    # Required permissions
+    permissions:
+      pull-requests: read
+
+    # Set job outputs to values from filter step
+    outputs:
+      backend: ${{ steps.filter.outputs.backend }}
+
     steps:
-    - uses: actions/checkout@v4 
-    
-    - name: Login Dockerhub
+    - uses: dorny/paths-filter@v3.0.2
+      id: filter
+      with:
+        filters: |
+          backend:
+            - 'server/**'
+
+    # Login required regardless of server changes
+    - name: Login to Dockerhub
       env:
         DOCKER_USERNAME: ${{secrets.DOCKER_USERNAME}}
         DOCKER_PASSWORD: ${{secrets.DOCKER_PASSWORD}}
       run: docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
+
+  # Build and backend code image
+  build-backend:
+    needs: check-changes
+    if: ${{ needs.check-changes.outputs.backend == 'true' }}
+    runs-on: [self-hosted, Reverse-Proxy]
+    steps:
       
-    - name: Build the Docker image
+    - name: Build Image
       working-directory: ./server
       env: 
         DOCKER_USERNAME: ${{secrets.DOCKER_USERNAME}}
@@ -29,4 +50,3 @@ jobs:
       env: 
         DOCKER_USERNAME: ${{secrets.DOCKER_USERNAME}}
       run: sudo docker push $DOCKER_USERNAME/flow-issue-tracker:server
-    
