--- a/.github/workflows/ci-server.yml
+++ b/.github/workflows/ci-server.yml
@@ -14,6 +14,7 @@ jobs:
       with:
         sparse-checkout: |
           ./scripts/server/install-docker.sh
+        clean: false 
 
     - name: Install Docker
       run: |
@@ -51,7 +52,9 @@ jobs:
 
   # Build and push backend code image
   build-backend:
-    needs: check-changes
+    needs: 
+      - check-changes
+      - check-docker
     if: ${{ needs.check-changes.outputs.backend == 'true' }}
     runs-on: [self-hosted, Reverse-Proxy]
 
