--- a/.github/workflows/ci-server.yml
+++ b/.github/workflows/ci-server.yml
@@ -13,7 +13,8 @@ jobs:
     - uses: actions/checkout@v4
       with:
         sparse-checkout: |
-          ./scripts/server/install-docker.sh
+          ./scripts
+          ./server-configs
         clean: false 
 
     - name: Install Docker
