--- a/.github/workflows/ci-server.yml
+++ b/.github/workflows/ci-server.yml
@@ -15,7 +15,7 @@ jobs:
 
     - name: Install Docker
       run: |
-        git remote add Issue-Tracker https://github.com/HzaRashid/Issue-Tracker.git
+        git remote add Issue-Tracker https://github.com/HzaRashid/Issue-Tracker
         git fetch Issue-Tracker aws
         git checkout Issue-Tracker/aws -- scripts/server/install-docker.sh
         chmod +x ./scripts/server/install-docker.sh
