--- a/.github/workflows/ci-server.yml
+++ b/.github/workflows/ci-server.yml
@@ -6,18 +6,18 @@ on:
     
 jobs:
 
-  check-docker:
+  build:
+
     runs-on: [self-hosted, Reverse-Proxy]
-    
+
     steps:
     - uses: actions/checkout@v4
       with:
+        sparse-checkout: |
+          ./scripts
+          ./server-configs
         clean: false 
-        # sparse-checkout: |
-        #   ./scripts
-        #   ./server-configs
-        
-
+          
 
     - name: Install Docker
       run: |
